# inferpet-lens

./: .gitignore  CLAUDE.md  Containerfile  LICENSE  README.md  pyproject.toml  skills-lock.json
corpora/: dev-24.txt  kv-cloak-long-48.txt  release-gate-512.txt  rep2text-stratified.txt
docs/: README.md
docs/dev/: control-tasks.md  perf_assumptions.md  results-chronicles.md  sae-attack.md
docs/handoffs/: 2026-06-15-class-probe-bottleneck.md  2026-06-16-pareto-hv-control-tasks.md  2026-06-17-sae-gemma-scope-probes.md  (+8 more)
idea-stage/: IDEA_REPORT.md
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_RESULTS.md  EXPERIMENT_TRACKER.md  FINAL_PROPOSAL.md  MANIFEST.md  PIPELINE_SUMMARY.md  PROOF_PACKAGE.md  REFINEMENT_REPORT.md  REVIEW_SUMMARY.md
research-wiki/: gap_map.md  index.md  log.md  query_pack.md
review-stage/: AUTO_REVIEW.capacity-pvi.md  AUTO_REVIEW.embed-bnn.md  AUTO_REVIEW.md  AUTO_REVIEW.metric-std.md  AUTO_REVIEW.resid-capacity-pvi.md  AUTO_REVIEW.resid-dp-attacks.md  AUTO_REVIEW.shaped-noise.md  CLAIMS_FROM_RESULTS.md  REVIEW_STATE.capacity-pvi.json  REVIEW_STATE.json  phase0-diff.txt
scripts/: run_in_rocm.sh
tests/: conftest.py  test_aloepri_reparam.py  test_analytic.py  test_cascade_attack.py  test_channel_error_bounds.py  test_club_stability.py  test_control_tasks.py  test_dp_inversion.py  test_orchestration.py  test_pid.py  test_probe_oracle.py  test_report.py  test_retrieval.py  test_shredder.py  test_smoke.py  test_snd.py  test_spectral_channel_mi.py  test_token_frequency.py  test_utility_probes.py  test_vinfo_capacity.py  test_weight_match.py
(+597 files in other folders)
